--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "carousel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://saladnights.github.io/ada-widget-carousel",
   "dependencies": {
     "@ada-support/ada-widget-sdk": "0.0.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/dot-object": "^2.1.2",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.62",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
-    "@types/react-slick": "^0.23.4",
     "axios": "^0.19.2",
     "deepmerge": "^4.2.2",
     "dot-object": "^2.1.4",
@@ -59,6 +58,8 @@
     ]
   },
   "devDependencies": {
+    "@types/dot-object": "^2.1.2",
+    "@types/react-slick": "^0.23.4",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^6.6.0",
